--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Felih Cumpleaño</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="img/icons/icon_gift.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/backgrounds/icon_gift.png"/>
+
+
 
   </head>
   <body>
@@ -19,13 +21,265 @@
         </div>
       </section>
 
-      <section id = "message_happy_birthday">
-        <div>
-          <h1>Felih Cumpleañoh :')</h1>
-        </div>
+      <section id = "chat">
+        <div class="content">
 
+          <div id="startBackgroundMusic">
+            <div class = "ballon_Content right">
+              <div class = "ballon wow animate__animated animate__backInRight">
+                <p>Pinshi manco. >:V</p>
+              </div>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left ">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p>Todo meco.</p>
+            </div>
+          </div>
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>Report</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left ">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p>Vayase alv</p>
+            </div>
+          </div>
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>ya mejor salte we :v</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left ">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p>No le sabes jue. :u</p>
+            </div>
+          </div>
+
+
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>Nadie te quiere alv</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left ">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p></p>
+            </div>
+          </div>
+
+
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>Siempre fedeas jue :v</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left ">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p>No le atinas a los minions alv</p>
+            </div>
+          </div>
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>Desinstala prro</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p>No mas sirves de carnada :v</p>
+            </div>
+          </div>
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>al shile te carrean</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon wow animate__animated animate__backInLeft">
+              <p>Tas todo manco we, surrender mejor :v</p>
+            </div>
+          </div>
+
+
+          <div class = "ballon_Content right">
+            <div class = "ballon wow animate__animated animate__backInRight">
+              <p>todo noob</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon start wow animate__animated animate__backInLeft">
+              <p>te dicen el crikoso :v</p>
+            </div>
+          </div>
+
+          <div class= "ballon_Content left">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon start wow animate__animated animate__backInLeft">
+              <p>Para Alkapone, eres un número más alv. :v</p>
+            </div>
+          </div>
+
+
+          <div class= "ballon_Content left">
+            <div class = "picProfile wow animate__animated animate__fadeIn animate__delay-1s">
+            </div>
+
+            <div class = "ballon end wow animate__animated animate__backInLeft">
+              <p>Si vas a shark tank, los inversionistas te dicen que están fuera alv</p>
+            </div>
+          </div>
+
+          <div class = "ballon_Content right">
+            <div class = "ballon start wow animate__animated animate__backInRight">
+              <p>Nah no es cierto jue. uwu </p>
+            </div>
+          </div>
+
+          <div class = "ballon_Content right">
+            <div class = "ballon middle wow animate__animated animate__backInRight">
+              <p>Se te quiere prro. :3</p>
+            </div>
+          </div>
       </section>
 
+
+
+      <section id="audios">
+        <div class = "content">
+
+          <div class = "individual_audio">
+
+            <div class = "person_name">
+              <h1>Sandra</h1>
+            </div>
+
+            <div class = "box_audio">
+              <audio controls>
+                <source src="audios/audio_sandra.ogg" type="audio/ogg">
+                  <p>Si ves este mensaje, entonces tu PC no corre los audios. :'v chales</p>
+              </audio>
+            </div>
+
+          </div>
+
+
+
+          <div class = "individual_audio">
+            <h1>Alambrito</h1>
+
+            <div class = "box_audio">
+              <audio controls>
+                  <source src="audios/audio_alan1.ogg" type="audio/ogg">
+                  <p>Si ves este mensaje, entonces tu PC no corre los audios. :'v chales</p>
+                </audio>
+            </div>
+            <div class = "box_audio">
+              <audio controls>
+                  <source src="audios/audio_alan2.ogg" type="audio/ogg">
+                  <p>Si ves este mensaje, entonces tu PC no corre los audios. :'v chales</p>
+                </audio>
+            </div>
+            <div class = "box_audio">
+              <audio controls>
+                  <source src="audios/audio_alan3.ogg" type="audio/ogg">
+                  <p>Si ves este mensaje, entonces tu PC no corre los audios. :'v chales</p>
+                </audio>
+            </div>
+            <div class = "box_audio">
+              <audio controls>
+                  <source src="audios/audio_alan4.ogg" type="audio/ogg">
+                  <p>Si ves este mensaje, entonces tu PC no corre los audios. :'v chales</p>
+                </audio>
+            </div>
+          </div>
+
+          <div class = "individual_audio">
+
+            <div class = "person_name">
+              <h1>Capi</h1>
+            </div>
+
+            <div class = "box_audio">
+              <audio controls>
+                <source src="audios/audio_oscar.mp3" type="audio/mpeg">
+                  <p>Si ves este mensaje, entonces tu PC no corre los audios. :'v chales</p>
+              </audio>
+            </div>
+
+          </div>
+
+          <div class = "individual_audio">
+            <h1>Pepe y Martín estaban ocupados para hacer audio, pero igual te desean feliz cumpleaños. :3</h1>
+            <p><p>
+              <center>
+            <h1><h1>
+              <h1><h1>
+                <h1><h1>
+                  <h1><h1>
+                    <h1><h1>
+                      <h1><h1>
+                      </center>
+          </div>
+        </div>
+      </section>
+
+      <div class="wow animate__animated animate__fadeInUp animate__delay-1s">
+        <section id = "message_happy_birthday">
+          <div>
+            <div class="wow animate__animated animate__fadeInUp animate__delay-0.5s">
+                <h1>Felih Cumpleañoh</h1>
+            </div>
+          </div>
+        </section>
+      </div>
+
+
     </main>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
   </body>
 </html>
